--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
   edge: true
   provider: elasticbeanstalk
   region: "us-east-2"
-  app: "multi-docker"
+  app: "multi-dicoer"
   env: "MultiDicoer-env"
   bucket_name: "elasticbeanstalk-us-east-2-074208680549"
   packet_path: "docker-multi"
